@@ -53,6 +53,7 @@ export(dim_pretty)
 export(display)
 export(docx_value)
 export(empty_blanks)
+export(fit_to_width)
 export(fix_border_issues)
 export(flextable)
 export(flextable_dim)
