@@ -19,7 +19,8 @@ dim(ft)
 }
 \seealso{
 Other flextable dimensions: \code{\link{autofit}},
-  \code{\link{dim_pretty}}, \code{\link{flextable_dim}},
-  \code{\link{height}}, \code{\link{width}}
+  \code{\link{dim_pretty}}, \code{\link{fit_to_width}},
+  \code{\link{flextable_dim}}, \code{\link{height}},
+  \code{\link{width}}
 }
 \concept{flextable dimensions}
