@@ -21,7 +21,8 @@ ft <- flextable(mtcars)
 }
 \seealso{
 Other flextable dimensions: \code{\link{autofit}},
-  \code{\link{dim.flextable}}, \code{\link{flextable_dim}},
-  \code{\link{height}}, \code{\link{width}}
+  \code{\link{dim.flextable}}, \code{\link{fit_to_width}},
+  \code{\link{flextable_dim}}, \code{\link{height}},
+  \code{\link{width}}
 }
 \concept{flextable dimensions}
