@@ -26,6 +26,7 @@ flextable_dim(ft)
 \seealso{
 Other flextable dimensions: \code{\link{autofit}},
   \code{\link{dim.flextable}}, \code{\link{dim_pretty}},
-  \code{\link{height}}, \code{\link{width}}
+  \code{\link{fit_to_width}}, \code{\link{height}},
+  \code{\link{width}}
 }
 \concept{flextable dimensions}
