@@ -42,6 +42,7 @@ ft <- height_all(ft, height = .3)
 \seealso{
 Other flextable dimensions: \code{\link{autofit}},
   \code{\link{dim.flextable}}, \code{\link{dim_pretty}},
-  \code{\link{flextable_dim}}, \code{\link{width}}
+  \code{\link{fit_to_width}}, \code{\link{flextable_dim}},
+  \code{\link{width}}
 }
 \concept{flextable dimensions}
