@@ -28,6 +28,7 @@ ft <- width(ft, width = 1)
 \seealso{
 Other flextable dimensions: \code{\link{autofit}},
   \code{\link{dim.flextable}}, \code{\link{dim_pretty}},
-  \code{\link{flextable_dim}}, \code{\link{height}}
+  \code{\link{fit_to_width}}, \code{\link{flextable_dim}},
+  \code{\link{height}}
 }
 \concept{flextable dimensions}
